--- a/packages/workbench-react/src/explorer-view.css
+++ b/packages/workbench-react/src/explorer-view.css
@@ -4,3 +4,8 @@
   height: 100%;
   flex-direction: column;
 }
+
+.workbench-explorer-view .ui-side-bar-view {
+  flex: 1 1 auto;
+  min-height: 0;
+}
